--- a/sections/image-content-3.liquid
+++ b/sections/image-content-3.liquid
@@ -38,7 +38,7 @@
     }
 </style>
 <div class="customstyle{{ section.id }} contentimg3 {% if section.settings.leftimage %} contentimg-left {% else %} contentimg-right {% endif %}" >
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <div class="container">
     <div class="section-block">
       <div class="row d-flex justify-content-center m-0">
