--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -1,6 +1,6 @@
 <style>.page-title{margin-bottom:40px;}.main-content{padding:0;}</style>
 <div class="customstyle{{ section.id }}">
-  {%- include 'style-section' -%}
+  {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <!-- <h1 class="text-center page-title">{{ page.title }}</h1> -->
     <div class="content-block--page">
