--- a/sections/advanced-content.liquid
+++ b/sections/advanced-content.liquid
@@ -18,12 +18,12 @@
   }
 </style>
 <div class="customstyle{{ section.id }} {% if section.settings.image_bg != blank %} lazyload {% endif %}" 
-style="{% if section.settings.image_bg != blank %}background-image:url({%- include 'srcBlank' -%}){% endif %}"  
+style="{% if section.settings.image_bg != blank %}background-image:url({%- render 'srcBlank' -%}){% endif %}"  
 data-section-id="{{ section.id }}"  data-bg="{{ section.settings.image_bg | img_url:"1920x" }}" >
-  {%- include 'style-section' -%}
+  {%- render 'style-section' -%}
 <div class="{{ section.settings.setwidth }}">
   <div class="section-block">
-    {%- include 'section-heading' -%}
+    {%- render 'section-heading' -%}
     <div class="row {% unless section.settings.padding %} m-0{% endunless %}">
       {%- for block in section.blocks -%}
       {%- case block.settings.width -%}
@@ -105,7 +105,7 @@ data-section-id="{{ section.id }}"  data-bg="{{ section.settings.image_bg | img_
                 <div class="video-wrapper">
                   <button class="video-section__player-close">
                     <span class="visually-hidden">{{ 'video.close' | t }}</span>
-                    {%- include 'icon-close' -%}
+                    {%- render 'icon-close' -%}
                   </button>
                   <div class="video-section__player"></div>
                 </div>
@@ -126,7 +126,7 @@ data-section-id="{{ section.id }}"  data-bg="{{ section.settings.image_bg | img_
                         alt="{{ block.settings.cover_image.alt | escape }}">
                       
                   </div>
-                  <!-- <img src="{%- include 'srcBlank' -%}" class="lazyload transition w-100" data-src="{{block.settings.cover_image | img_url : '1920x'}}" /> -->
+                  <!-- <img src="{%- render 'srcBlank' -%}" class="lazyload transition w-100" data-src="{{block.settings.cover_image | img_url : '1920x'}}" /> -->
                   {%- endif -%}
                 </div>
                 <div class="video-section__cover-overlay">
@@ -152,7 +152,7 @@ data-section-id="{{ section.id }}"  data-bg="{{ section.settings.image_bg | img_
           {%- when 'image' -%}
             {%- if block.settings.image != blank -%}
             <a href="{{block.settings.image_link | default:'#'}}" class="d-block" data-aos="{{section.settings.animation}}" data-aos-duration="1200">
-              <img src="{%- include 'srcBlank' -%}" class="lazyload transition w-100" data-src="{{block.settings.image | img_url : '1920x'}}" />
+              <img src="{%- render 'srcBlank' -%}" class="lazyload transition w-100" data-src="{{block.settings.image | img_url : '1920x'}}" />
             </a>
             {%- else -%}
             {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
@@ -160,9 +160,9 @@ data-section-id="{{ section.id }}"  data-bg="{{ section.settings.image_bg | img_
           {%- when 'productcustom' -%}
             {%- assign productLookbook = all_products[block.settings.product] -%}
               {%- if productLookbook != blank -%}
-                {%- include 'product-card', product: productLookbook -%}
+                {%- render 'product-card', product: productLookbook -%}
               {%- else -%}
-                {%- include 'product-grid-blank' -%} 
+                {%- render 'product-grid-blank' -%} 
             {%- endif -%}
           {%- when 'countdown' -%}
             <div class="countdownhtml text-{{ block.settings.alignhorizotal }} {% if block.settings.image_deal != blank %} lazyload {% endif %}" {% if block.settings.image_deal != blank %} data-bg="{{ block.settings.image_deal | img_url:"1920x" }}" data-sizes="auto"
