--- a/sections/backgroundvideo.liquid
+++ b/sections/backgroundvideo.liquid
@@ -1,7 +1,7 @@
 <!-- parallax-banner -->
 <!-- product-list.liquid -->
 <div class="customstyle{{ section.id }} " data-aos="{{section.settings.animation}}">
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <style>
     .bgvideo-{{ section.id }} {padding: {{section.settings.padding_desktop}}px 0;}@media (max-width:991px){.bgvideo-{{ section.id }} {padding: {{section.settings.padding_mobile}}px 0;}}
     .bgvideo-{{ section.id }}::before{
