--- a/sections/brand-carousel.liquid
+++ b/sections/brand-carousel.liquid
@@ -8,10 +8,10 @@
   }
 </style>
 <div class="customstyle{{ section.id }} " data-aos="{{section.settings.animation}}" >
-  {%- include 'style-section' -%}
+  {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
-      {%- include 'section-heading' -%}
+      {%- render 'section-heading' -%}
       <div class="brand-wrapper dots-negative">
         <div class="brand-slider row mb-0" id="collection-list-{{ section.id }}"
             data-rows="{{section.settings.rows}}"
@@ -27,7 +27,7 @@
           <div class="col brand-item carousel__slide-wrapper--{{block.id}}" {{ block.shopify_attributes }}>
             <a href="{{block.settings.link | default:'#'}}" class="{%- if section.settings.grayscale -%}hv-image-grayscale{%- endif -%}">
               {%- if block.settings.image != blank -%}
-              <img class="lazyload transition" src="{% include 'srcBlank' %}" data-src="{{ block.settings.image | img_url: '400x' }}" alt="{{ block.settings.image.alt }}">
+              <img class="lazyload transition" src="{% render 'srcBlank' %}" data-src="{{ block.settings.image | img_url: '400x' }}" alt="{{ block.settings.image.alt }}">
               {%- else -%}
               <div class="image-block__image">
                 {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
@@ -39,7 +39,7 @@
         </div>
       </div>
       {%- if section.blocks.size == 0 -%}
-      {%- include 'no-blocks' -%}
+      {%- render 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
