--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -74,7 +74,7 @@
             {% endfor %}
           </tbody>
         </table>
-        {% include 'free-shipping' %}
+        {% render 'free-shipping' %}
         <div class="row cart__row">
           {% if section.settings.cart_notes_enable %}
           <div class="col-md-6">
@@ -93,10 +93,10 @@
             
 
             {%- capture taxes_shipping_checkout -%}
-            {%- if shop.taxes_included and shop.shipping_policy.body != blank -%}
-            {{ 'cart.general.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
-            {%- elsif shop.taxes_included -%}
-            {{ 'cart.general.taxes_included_but_shipping_at_checkout' | t }}
+            {%- if shop.taxes_renderd and shop.shipping_policy.body != blank -%}
+            {{ 'cart.general.taxes_renderd_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
+            {%- elsif shop.taxes_renderd -%}
+            {{ 'cart.general.taxes_renderd_but_shipping_at_checkout' | t }}
             {%- elsif shop.shipping_policy.body != blank -%}
             {{ 'cart.general.taxes_and_shipping_policy_at_checkout_html' | t: link: shop.shipping_policy.url }}
             {%- else -%}
