--- a/sections/featured-collections-4.liquid
+++ b/sections/featured-collections-4.liquid
@@ -30,10 +30,10 @@
 
 </style>
 <div class="customstyle{{ section.id }}  data-aos="{{section.settings.animation}}" > 
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
       <div class="{{ section.settings.setwidth }}">
       <div class="section-block">
-          {%- include 'section-heading' -%}
+          {%- render 'section-heading' -%}
           <div class="collectionlist-wrapper" >
             <nav id="txtanimation-{{ section.id }}" class="txtcollection text-{{section.settings.textcontent}}" data-section-type="textanimation" data-section-id="{{ section.id }}" data-animation="{{section.settings.type_animation}}" >
               {%- for block in section.blocks -%}
@@ -63,7 +63,7 @@
               </nav>
           </div>
           {%- if section.blocks.size == 0 -%}
-          {%- include 'no-blocks' -%}
+          {%- render 'no-blocks' -%}
           {%- endif -%}
         </div>
       </div>
