--- a/sections/image-content-2.liquid
+++ b/sections/image-content-2.liquid
@@ -1,6 +1,6 @@
 <!-- image-content-2.liquid -->
 <div class="customstyle{{ section.id }} layout2" >
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
        
@@ -60,7 +60,7 @@
       </div>
   
       {%- if section.blocks.size == 0 -%}
-        {%- include 'no-blocks' -%}
+        {%- render 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
