--- a/sections/image-content-4.liquid
+++ b/sections/image-content-4.liquid
@@ -1,6 +1,6 @@
 <!-- image-content-4.liquid -->
 <div class="customstyle{{ section.id }} img-section" data-aos="{{section.settings.animation}}">
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
       <div class="row align-items-center">
