--- a/sections/image-content-5.liquid
+++ b/sections/image-content-5.liquid
@@ -5,12 +5,12 @@
   }
 </style>
 <div class="customstyle{{ section.id }} layout-dynamic" data-aos="{{section.settings.animation}}">
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
       <div class="row d-block clearfix">
         <div class="layout-dynamic--item col-title" data-aos="{{section.settings.animation}}" data-aos-duration="800" >
-            {%- include 'section-heading' -%}
+            {%- render 'section-heading' -%}
         </div>
         {%- for block in section.blocks -%}
           <div class="layout-dynamic--item" {{ block.shopify_attributes }} data-aos="{{section.settings.animation}}" data-aos-duration="1000">
@@ -54,7 +54,7 @@
       </div>
   
       {%- if section.blocks.size == 0 -%}
-        {%- include 'no-blocks' -%}
+        {%- render 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
