--- a/sections/image-content-6.liquid
+++ b/sections/image-content-6.liquid
@@ -1,6 +1,6 @@
 <!-- image-content-6.liquid -->
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}">
-    {%- include 'style-section' -%}
+    {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }}">
     <div class="section-block">
       <div class="row {% if section.settings.enable_padding %}no-gutters {% endif%}">
@@ -108,7 +108,7 @@
       </div>
   
       {%- if section.blocks.size == 0 -%}
-        {%- include 'no-blocks' -%}
+        {%- render 'no-blocks' -%}
       {%- endif -%}
     </div>
   </div>
