--- a/sections/instagram.liquid
+++ b/sections/instagram.liquid
@@ -7,10 +7,10 @@
   {% endif %}
 </style>
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}">
-  {%- include 'style-section' -%}
+  {%- render 'style-section' -%}
 <div class="{{ section.settings.setwidth }}">
   <div class="section-block">
-    {%- include 'section-heading' -%}
+    {%- render 'section-heading' -%}
     <div class="instagram row mx-n2 mb-0 dots-negative" id="Instagram-{{ section.id }}"
          data-style="{{section.settings.style}}"
          data-accesstoken="{{section.settings.accesstoken}}"
