--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -5,12 +5,12 @@
   }
 </style>
 <div class="customstyle{{ section.id }}" data-aos="{{section.settings.animation}}" >
-  {%- include 'style-section' -%}
+  {%- render 'style-section' -%}
   <div class="{{ section.settings.setwidth }} text-center">
     <div class="row d-flex justify-content-center">
       <div class="col-lg-8">
         <div class=" p-4 p-md-5">
-          {%- include 'section-heading' -%} 
+          {%- render 'section-heading' -%} 
             <div class="form-vertical px-md-5">
               {%- form 'customer' -%}
                 {{ form.errors | default_errors }}
