--- a/sections/page-contact.liquid
+++ b/sections/page-contact.liquid
@@ -83,7 +83,7 @@
           </div>
         {%- endif -%}
         {%- if section.blocks.size == 0 -%}
-          {%- include 'no-blocks' -%}
+          {%- render 'no-blocks' -%}
         {%- endif -%}
       </div>
     </div>
